[package]
name = "cow-trading"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level trading SDK for the CoW Protocol (quote → sign → post → track)."
readme = "../../README.md"
keywords = ["cow", "cowprotocol", "defi", "ethereum", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.workspace.layer]
layer = 5

[lib]
doctest = false

[dependencies]
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
cow-app-data.workspace = true
cow-chains.workspace = true
cow-erc20.workspace = true
cow-errors.workspace = true
cow-ethflow.workspace = true
cow-onchain.workspace = true
cow-orderbook.workspace = true
cow-signing.workspace = true
cow-types.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true

[dev-dependencies]
alloy-signer.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
wiremock.workspace = true

[lints]
workspace = true
