[package]
name = "cow-rs-examples"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false
description = "Native examples for the cow-rs SDK"

[dependencies]
alloy-primitives = { version = "1", features = ["serde"] }
alloy-signer-local = "1"
cow-app-data = { path = "../../crates/app-data", version = "0.4" }
cow-bridging = { path = "../../crates/bridging", version = "0.4" }
cow-chains = { path = "../../crates/chains", version = "0.4" }
cow-composable = { path = "../../crates/composable", version = "0.4" }
cow-erc20 = { path = "../../crates/erc20", version = "0.4" }
cow-ethflow = { path = "../../crates/ethflow", version = "0.4" }
cow-flash-loans = { path = "../../crates/flash-loans", version = "0.4" }
cow-onchain = { path = "../../crates/onchain", version = "0.4" }
cow-orderbook = { path = "../../crates/orderbook", version = "0.4" }
cow-permit = { path = "../../crates/permit", version = "0.4" }
cow-shed = { path = "../../crates/cow-shed", version = "0.4" }
cow-signing = { path = "../../crates/signing", version = "0.4" }
cow-subgraph = { path = "../../crates/subgraph", version = "0.4" }
cow-trading = { path = "../../crates/trading", version = "0.4" }
cow-types = { path = "../../crates/types", version = "0.4" }
cow-weiroll = { path = "../../crates/weiroll", version = "0.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true

# ── Orders ────────────────────────────────────────────────────────────────────

[[example]]
name = "get_quote"
path = "examples/orders/get_quote.rs"

[[example]]
name = "swap_order"
path = "examples/orders/swap_order.rs"

[[example]]
name = "limit_order"
path = "examples/orders/limit_order.rs"

[[example]]
name = "cancel_order"
path = "examples/orders/cancel_order.rs"

[[example]]
name = "order_status"
path = "examples/orders/order_status.rs"

[[example]]
name = "order_signing"
path = "examples/orders/order_signing.rs"

# ── Composable orders ─────────────────────────────────────────────────────────

[[example]]
name = "composable_twap"
path = "examples/composable/twap.rs"

[[example]]
name = "composable_stop_loss"
path = "examples/composable/stop_loss.rs"

# ── Onchain / Subgraph / App-data / Config ────────────────────────────────────

[[example]]
name = "onchain_reader"
path = "examples/onchain/reader.rs"

[[example]]
name = "subgraph_query"
path = "examples/subgraph/query.rs"

[[example]]
name = "app_data"
path = "examples/app_data/metadata.rs"

[[example]]
name = "chain_config"
path = "examples/config/chain.rs"

# ── Pre-interaction hooks (permit, flash loans, cow shed, weiroll) ────────────

[[example]]
name = "permit_eip2612"
path = "examples/permit/eip2612.rs"

[[example]]
name = "flash_loan_balancer"
path = "examples/flash_loans/balancer_loan.rs"

[[example]]
name = "cow_shed_bundle"
path = "examples/cow_shed/bundled_calls.rs"

[[example]]
name = "weiroll_script"
path = "examples/weiroll/script_planner.rs"

# ── EthFlow & ERC-20 calldata ─────────────────────────────────────────────────

[[example]]
name = "ethflow_order"
path = "examples/ethflow/native_eth_order.rs"

[[example]]
name = "erc20_calldata"
path = "examples/erc20/calldata.rs"

# ── Bridging ──────────────────────────────────────────────────────────────────

[[example]]
name = "bridging_quote"
path = "examples/bridging/cross_chain_quote.rs"

[[example]]
name = "bridging_cross_chain_post"
path = "examples/bridging/cross_chain_post.rs"

[[example]]
name = "bridging_near_sol"
path = "examples/bridging/bridge_to_sol_via_near.rs"

[[example]]
name = "bridging_near_btc"
path = "examples/bridging/bridge_to_btc_via_near.rs"
