[package]
name = "cow-rs-wasm-demo"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false
description = "Browser demo for cow-rs WASM bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
cow-rs = { path = "../../crates/cow-rs", version = "1", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlElement", "HtmlButtonElement", "HtmlInputElement", "HtmlPreElement", "Window", "Node"] }
serde_json = "1"
