[package]
name = "cow-rs-bridging-console"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false
description = "Browser bridging console demo for cow-rs WASM bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
cow-rs = { path = "../../../crates/cow-rs", default-features = false, features = ["wasm"] }
alloy-primitives = "1"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
